--- a/Paper/HRI-17-LBR.tex
+++ b/Paper/HRI-17-LBR.tex
@@ -140,7 +140,7 @@ cognitive load estimate. }
 \begin{figure}
 \centering
 \includegraphics[width=.5\textwidth]{BoxWiskerTimesCompMaualVsAuto2.eps}
-\caption{Coin game task penalties in manual vs autonomous assistance modes across 34 test subjects. The p-value for both box-plots is less than 5\%.}
+\caption{Coin game task penalties in manual vs autonomous assistance modes across 34 test subjects. The p-values for both box-plots are less than 5\%.}
 \label{fig:BoxWiskersTimeComp}
 \end{figure}
 
