Solved Type 3 font issue by saving data plots as PNG instead of EPS.

--- a/Paper/Mahi-HRI-17.tex
+++ b/Paper/Mahi-HRI-17.tex
@@ -1,5 +1,5 @@
 \documentclass{sig-alternate-05-2015}
-\usepackage{booktabs}
+%\usepackage{booktabs}
 
 \begin{document}
 
@@ -161,7 +161,7 @@ perform are opaque to the robot.
 
 \begin{figure}  
 \centering
-\includegraphics[width=.5\textwidth]{prediction_vs_b_p_2.eps}
+\includegraphics[width=.5\textwidth]{prediction_vs_b_p_2.png}
 \caption{Robot's estimated cognitive stress level modestly correlates
   with physiological metrics.}
 \label{fig:pred_phy}
@@ -169,7 +169,7 @@ perform are opaque to the robot.
 
 \begin{figure}
 \centering
-\includegraphics[width=.5\textwidth]{BoxWiskerTimesCompMaualVsAuto2.eps}
+\includegraphics[width=.5\textwidth]{BoxWiskerTimesCompMaualVsAuto2.png}
 \caption{Coin game task penalties in manual vs. autonomous assistance
   modes across 34 test subjects. $p < 0.05$ in both instances.}
 \label{fig:BoxWiskersTimeComp}
