--- a/HRI_poster/figures/stress_model.tex
+++ b/HRI_poster/figures/stress_model.tex
@@ -29,7 +29,7 @@
     typetag/.style={rectangle, minimum size=1mm, rounded corners=0.4mm, thick, draw=orange!80!black!50, top color=white, bottom color=orange!80!black!50, font=\tiny},
     typetag1/.style={rectangle, minimum size=10mm, rounded corners=1mm, thick, draw=orange!80!black!50, top color=white, bottom color=orange!80!black!50, font=\tiny}
     ]
-    \node (ein) [typetag, xshift=74mm, yshift=0mm]  {
+    \node[scale=2] (ein) [typetag, xshift=74mm, yshift=0mm]  {
       \begin{minipage}{.5in}
         \centering
           \begin{align*}
@@ -43,21 +43,29 @@
         \end{align*}
       \end{minipage}  
     };
-    \node (fe) [typetag, right of=ein, xshift=+50mm]  {
+    \node[scale=2] (fe) [typetag, right of=ein, xshift=+50mm]  {
       \begin{minipage}{.47in}
         \centering
           \begin{align*}
-          f(E) &=
-          \frac{1}{Z}\sum_{i=0}^{|E|} e_i
+          s = f(E)
+          % \frac{1}{Z}\sum_{i=0}^{|E|} e_i
         \end{align*}
       \end{minipage}  
     };
 
-    \node (eout) [typetag, right of=fe, xshift=+50mm]  {
+    \node[scale=1] (di5) at (12 in, .1 in) {
+    \begin{minipage}{3in}
+      \centering
+      Learning function g from E and s pairs
+      \end{minipage}
+    };
+
+    \node[scale=2] (eout) [typetag, right of=fe, xshift=+50mm]  {
+
       \begin{minipage}{.47in}
         \centering
-          \begin{align*}
-          s = f(H)
+        \begin{align*}
+          g:H\rightarrow R
         \end{align*}
       \end{minipage}  
     };
@@ -65,7 +73,7 @@
     \edge {ein} {fe}
     \edge {fe} {eout}
     \plate {maze_game} {(ein)(fe)(eout)} {Maze Game\\ Training model}
-    \node (hin) [typetag, xshift=74mm, yshift=-3cm]  {
+    \node[scale=2] (hin) [typetag, xshift=74mm, yshift=-3cm]  {
       \begin{minipage}{.5in}
         \centering
           \begin{align*}
@@ -79,20 +87,27 @@
         \end{align*}
       \end{minipage}  
     };
-    \node (fh) [typetag, right of=hin, xshift=+50mm]  {
+    \node[scale=2] (fh) [typetag, right of=hin, xshift=+50mm]  {
       \begin{minipage}{.47in}
         \centering
           \begin{align*}
-          \hat{f}(H)
+          g(H)
         \end{align*}
       \end{minipage}  
     };
 
-    \node (hout) [typetag, right of=fh, xshift=+50mm]  {
+  \node[scale=1] (di5) at (12 in, -2.5 in) {
+    \begin{minipage}{3in}
+      \centering
+      g's estimate of cognitive stress
+      \end{minipage}
+    };
+
+    \node[scale=2] (hout) [typetag, right of=fh, xshift=+50mm]  {
       \begin{minipage}{.47in}
         \centering
           \begin{align*}
-          \hat{s} = f(H)
+          \hat{s}
         \end{align*}
       \end{minipage}  
     };
